
* **Updated Theme Blvd framework to 2.6.0**
* Improvement: Expanded video background support.
    * YouTube and Vimeo support added.
    * Simplified options for inputting video.
    * Additional HTML5 video formats (mp4, webm, ogv) automatically included, if exist.
    * Better dynamic video re-sizing to fit area, based on inputted aspect ratio.
    * Progressive loading for longer videos.
* Updated: FontAwesome to 4.5.
* Updated: FlexSlider to 2.6.
* Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
* Fixed: "Custom CSS" option code editor on theme options page not working with RTL.

--------------------------------------------------------------

2.0.4 - 12/11/2015
------------------

* Improvement: Some frontend RTL fixes and improvements.
* Improvement: Admin RTL fixes and improvements.
* Improvement: Frontend post grid/showcase filtering now also effects navigating items in corresponding lightbox gallery.
* Improvement: Minor comment form styling adjustments for changes in WordPress 4.4+.
* Improvement: Now using `srcset` for HiDPI/Retina logo with no javascript, to match practices of WordPress 4.4+.
* Fixed: Dropdown menus not displaying when adding a parallax background image or video background to site header from theme options.
* Fixed: Post slider style #2 captions not displaying correctly.
* Fixed: Javascript conflicts with JetPack on Edit Page/Post screens.
* Fixed: Hero unit text not displaying above background video.
* Fixed: WPML-translated pages not allowing to save a unique, translated custom layout.
* Fixed: Display issues with new post embedding, introduced in WordPress 4.4.

--------------------------------------------------------------

2.0.3 - 11/10/2015
------------------

* New: Added compatibility for [Nav Menu Roles](https://wordpress.org/plugins/nav-menu-roles) plugin.
* Fixed: Banner Meta box display issue on Edit Page screen in admin.