@@ -4920,6 +4920,7 @@ blockquote small {
 .tb-thumb-link img,
 .tb-thumb-link .img {
 	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 	-webkit-transition: opacity 0.25s ease;
 	transition: opacity 0.25s ease;
 }
@@ -5459,33 +5460,102 @@ blockquote small {
 	margin: 0;
 	position: relative;
 }
-.post_showcase .showcase-item.has-title .featured-item.showcase .item-title {
-	background: rgba(0,0,0,.6);
+.post_showcase .showcase-item.has-title .featured-item.showcase .tb-thumb-link:before {
+	background-color: transparent;
+	background-position: center center;
+	background-repeat: no-repeat;
+	font-size: 18px;
+	line-height: 2.5em;
+	margin: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: inherit;
+	width: 2.5em;
+    height: 2.5em;
+	-ms-transform: none;
+	-webkit-transform: none;
+	transform: none;
+	-webkit-transition: opacity 0.25s ease-in, top 0.25s ease-in;
+	transition: opacity 0.25s ease-in, top 0.25s ease-in;
+}
+.post_showcase .showcase-item.has-title .featured-item.showcase .tb-thumb-link:after,
+.post_showcase .showcase-item.has-title .featured-item.showcase.tb-thumb-link:after {
+	content: "";
+	background-color: #fec527; /* highlight */
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
 	bottom: 0;
+	left: 0;
+	-webkit-transition: opacity .25s ease-in-out;
+	transition: opacity .25s ease-in-out;
+}
+.post_showcase .showcase-item.has-title .featured-item.showcase .tb-thumb-link:hover:after,
+.post_showcase .showcase-item.has-title .featured-item.showcase.tb-thumb-link:hover:after {
+	opacity: .8;
+}
+.post_showcase .showcase-item.has-title .featured-item.showcase .tb-thumb-link:hover img,
+.post_showcase .showcase-item.has-title .featured-item.showcase .tb-thumb-link:hover .img,
+.post_showcase .showcase-item .featured-item.showcase.tb-thumb-link:hover img {
+    opacity: 1;
+}
+.post_showcase .showcase-item.has-title .featured-item.showcase .item-title {
 	color: #ffffff;
 	font-weight: bold;
 	opacity: 0;
-	padding: 5px 8px;
+	padding: 0 15%;
 	position: absolute;
+	top: 48%;
+	right: 0;
+	bottom: inherit;
+	left: 0;
 	text-align: center;
 	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-transition: opacity 0.25s ease-in;
-	transition: opacity 0.25s ease-in;
+    -moz-osx-font-smoothing: grayscale;
+	-ms-transform: translate(0, -50%); /* IE9 */
+	-webkit-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	-webkit-transition: opacity 0.25s ease-in, top 0.25s ease-in;
+	transition: opacity 0.25s ease-in, top 0.25s ease-in;
 	width: 100%;
-	z-index: 3;
+	height: auto;
+    z-index: 3;
 }
 .post_showcase .showcase-item.has-title .featured-item.showcase:hover .item-title {
 	opacity: 1;
+	top: 50%;
 }
-.post_showcase .showcase-item.has-title .featured-item.showcase .tb-thumb-link:before {
-	left: inherit;
-	line-height: 2.5em;
-	margin: 0;
-	right: 10px;
-	top: 10px;
-	width: 2.5em;
-	height: 2.5em;
+.post_showcase .showcase-item.has-title .featured-item.showcase .title,
+.post_showcase .showcase-item.has-title .featured-item.showcase .cat {
+	display: block;
+	line-height: 1.3;
+	font-size: 14px;
+}
+.post_showcase .showcase-item.has-title .featured-item.showcase .title {
+	margin-bottom: 5px;
+	text-transform: uppercase;
+}
+.post_showcase .showcase-item.has-title .featured-item.showcase .cat {
+	font-size: 13px;
+}
+.post_showcase.has-gutters .featured-item.showcase img,
+.post_showcase.has-gutters .featured-item.showcase .img {
+	-webkit-backface-visibility: visible;
+	backface-visibility: visible;
+	-webkit-transition: opacity .25s ease;
+	transition: opacity .25s ease;
+}
+.post_showcase .featured-item.tb-thumb-link:before,
+.post_showcase .featured-item.tb-thumb-link:after {
+	display: none; /* when showcase image doesn't have a link */
+}
+.post_showcase .showcase-item.has-title .featured-item.tb-thumb-link:after {
+	display: block; /* when showcase image doesn't have a link, but has title */
+}
+.post_showcase.no-gutters .tb-thumb-link:after {
+	border-radius: 0;
 }
 .post_showcase .entry-content {
 	background: #f8f8f8;
