@@ -11,6 +11,7 @@ Jump Start Changelog
     * Additional HTML5 video formats (mp4, webm, ogv) automatically included, if exist.
     * Better dynamic video re-sizing to fit area, based on inputted aspect ratio.
     * Progressive loading for longer videos.
+* Improvement: Design changes for default post showcase display.
 * Updated: FontAwesome to 4.5.
 * Updated: FlexSlider to 2.6.
 * Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
